--- a/pft-joao-dev/src/index.css
+++ b/pft-joao-dev/src/index.css
@@ -1,11 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #2a2a2a;
-  --color-secondary: #3c3c3c;
-  --color-tertiary: #4f4f4f;
-  --color-quaternary: #616161;
-  --color-quinary: #737373;
+  --color-gray: #737372;
+  --color-gray-second: #a6a6a6;
+  --color-tertiary: #404040;
+  --color-black: #0d0d0d;
+  --color-white: #f2f2f2;
+  --color-orange: #ff8800;
 
   --font-family: "Quicksand", sans-serif;
 }
